--- a/_modules/index.html
+++ b/_modules/index.html
@@ -38,6 +38,7 @@
             
   <h1>All modules for which code is available</h1>
 <ul><li><a href="copyxnat/pyreporter/pyreporter.html">copyxnat.pyreporter.pyreporter</a></li>
+<li><a href="copyxnat/ui/copyxnat_command_line.html">copyxnat.ui.copyxnat_command_line</a></li>
 <li><a href="copyxnat/utils/versioneer_version.html">copyxnat.utils.versioneer_version</a></li>
 <li><a href="copyxnat/utils/versioning.html">copyxnat.utils.versioning</a></li>
 <li><a href="copyxnat/xnat/commands.html">copyxnat.xnat.commands</a></li>
