--- a/genindex.html
+++ b/genindex.html
@@ -46,6 +46,7 @@
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
+ | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
@@ -105,6 +106,16 @@
       </ul></li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command">Command (class in copyxnat.xnat.commands)</a>
 </li>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand.COMMAND_LINE">COMMAND_LINE (copyxnat.xnat.commands.CheckDatatypesCommand attribute)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CopyCommand.COMMAND_LINE">(copyxnat.xnat.commands.CopyCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ExportCommand.COMMAND_LINE">(copyxnat.xnat.commands.ExportCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ShowCommand.COMMAND_LINE">(copyxnat.xnat.commands.ShowCommand attribute)</a>
+</li>
+      </ul></li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CommandInputs">CommandInputs (class in copyxnat.xnat.commands)</a>
 </li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CommandReturn">CommandReturn (class in copyxnat.xnat.commands)</a>
@@ -146,12 +157,21 @@
 </li>
       </ul></li>
       <li>
+    copyxnat.ui.copyxnat_command_line
+
+      <ul>
+        <li><a href="copyxnat.ui.copyxnat_command_line.html#module-copyxnat.ui.copyxnat_command_line">module</a>
+</li>
+      </ul></li>
+      <li>
     copyxnat.utils
 
       <ul>
         <li><a href="copyxnat.utils.html#module-copyxnat.utils">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.utils.versioneer_version
 
@@ -166,8 +186,6 @@
         <li><a href="copyxnat.utils.versioning.html#module-copyxnat.utils.versioning">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.xnat
 
@@ -321,6 +339,8 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.find_command">find_command() (in module copyxnat.xnat.commands)</a>
+</li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache.full_path">full_path() (copyxnat.xnat.copy_cache.CopyCache method)</a>
 </li>
   </ul></td>
@@ -428,6 +448,22 @@
   </ul></td>
 </tr></table>
 
+<h2 id="H">H</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand.HELP">HELP (copyxnat.xnat.commands.CheckDatatypesCommand attribute)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CopyCommand.HELP">(copyxnat.xnat.commands.CopyCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ExportCommand.HELP">(copyxnat.xnat.commands.ExportCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ShowCommand.HELP">(copyxnat.xnat.commands.ShowCommand attribute)</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -457,6 +493,8 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.ui.copyxnat_command_line.html#copyxnat.ui.copyxnat_command_line.main">main() (in module copyxnat.ui.copyxnat_command_line)</a>
+</li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.make_project_names_unique">make_project_names_unique() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.message">message() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
@@ -474,6 +512,8 @@
         <li><a href="copyxnat.pyreporter.pyreporter.html#module-copyxnat.pyreporter.pyreporter">copyxnat.pyreporter.pyreporter</a>
 </li>
         <li><a href="copyxnat.ui.html#module-copyxnat.ui">copyxnat.ui</a>
+</li>
+        <li><a href="copyxnat.ui.copyxnat_command_line.html#module-copyxnat.ui.copyxnat_command_line">copyxnat.ui.copyxnat_command_line</a>
 </li>
         <li><a href="copyxnat.utils.html#module-copyxnat.utils">copyxnat.utils</a>
 </li>
